--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lateef&family=Noto+Naskh+Arabic:wght@600&family=Noto+Sans+Arabic:wght@400;500;600&display=swap" rel="stylesheet">
     <script
       src="https://kit.fontawesome.com/a076d05399.js"
       crossorigin="anonymous"
@@ -59,41 +62,92 @@
     <title>Navbar</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light custom-navbar">
+    <nav class="navbar navbar-expand-lg navbar-light custom-navbar">
       <div class="container-fluid">
         <img src="src/logo.png" width="80px" alt="logo" />
-        <!-- <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarText"
-          aria-controls="navbarText"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button> -->
         <div class="collapse navbar-collapse" id="navbarText">
           <div>
             <div class="input-group-prepend navbar-searchbox-position">
               <i class="fa fa-search searchbox-icon-navbar"></i>
               <input
                 type="text"
-                class="form-control my-5 input-text-default"
+                class="form-control my-5 navbar-input-text-default"
                 placeholder="دنبال چی میگردی؟"
                 aria-describedby="basic-addon1"
-                style="width: 300px"
+                style="width: 500px"
               />
             </div>
           </div>
-          <div>
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item"></li>
-              <li class="nav-item"></li>
-            </ul>
-          </div>
+        </div>
+        <div class="navbar-icons d-flex align-items-center">
+                  <a>
+                        <div class="navbar-icons-default">
+                                <i class="material-icons">&#xe850;</i>
+                        </div>
+                  </a>
+                  <a>
+                        <div class="navbar-icons-default">
+                               <i class="material-icons">&#xe54c;</i>
+                         </div>
+                  </a>
+                 <a>
+                      <div class="navbar-icons-default">
+                             <i class="material-icons">&#xe7fd;</i>
+                      </div>
+                 </a>
         </div>
       </div>
+    </nav>
+
+    <nav class="navbar navbar-expand-lg navbar-light custom-bottom-navbar">
+              <div class="container-fluid d-flex justify-content-center">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNavDropdown">
+                  <ul class="navbar-nav">
+                    <li class="nav-item d-flex align-items-center">
+                      <i class="material-icons menulist-navbar-icon" >&#xe88a;</i>
+                      <a class="nav-link active" aria-current="page" href="#">صفحه اصلی</a>
+                    </li>
+                    <li class="nav-item dropdown d-flex align-items-center">
+                      <i class="material-icons menulist-navbar-icon">&#xe04a;</i>
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        دوره های آموزشی
+                      </a>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" href="#">دوره HTML CSS </a></li>
+                        <li><a class="dropdown-item" href="#">دوره هیولاشو جاوااسکریپت </a></li>
+                        <li><a class="dropdown-item" href="#"> دوره متخصص ری اکت</a></li>
+                      </ul>
+                    </li>
+                    <li class="nav-item d-flex align-items-center">
+                      <i class="material-icons menulist-navbar-icon">&#xe8af;</i>
+                      <a class="nav-link" href="#">پرسش و پاسخ</a>
+                    </li>
+                    <li class="nav-item d-flex align-items-center">
+                      <i class="material-icons menulist-navbar-icon">&#xe02f;</i>
+                      <a class="nav-link" href="#">مقالات</a>
+                    </li>
+                    <li class="nav-item  d-flex align-items-center">
+                      <i class="material-icons menulist-navbar-icon">&#xe887;</i>
+                      <a class="nav-link" href="#">سوالات متداول</a>
+                    </li>
+                    <li class="nav-item dropdown d-flex align-items-center">
+                      <i class="material-icons menulist-navbar-icon">&#xe157;</i>
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        لینک های مفید
+                      </a>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" href="#">کانال تلگرام</a></li>
+                        <li><a class="dropdown-item" href="#">درباره ما</a></li>
+                        <li><a class="dropdown-item" href="#">ارتباط با ما</a></li>
+                        <li><a class="dropdown-item" href="#">همکاری با ما</a></li>
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
+              </div>
     </nav>
 
     <div
