--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
               >
               <a href="#">آخرین ویدیوها</a>
             </div>
+
             <div class="d-flex">
               <i
                 class="material-icons default-humberger-icons"
@@ -243,6 +244,30 @@
               >
               <a href="#">مقالات آموزشی</a>
             </div>
+
+                <div class="">
+                          <div class="d-flex dropdown-btn">
+                            <i
+                            class="material-icons default-humberger-icons"
+                            style="color: aliceblue; font-size: 12; margin-right: 25px;"
+                          >
+                          &#xe250;</i
+                          >
+                        <a class="dropdown-btn">لینک های مفید </a>
+                        <i
+                            class="material-icons default-humberger-icons"
+                            style="color: aliceblue; font-size: 12; margin-left: 20px; margin-right: 0;"
+                          >
+                          &#xe5c5;</i>
+                          </div>
+                        <div class="dropdown-container">
+                          <a href="#">کانال تلگرام</a>
+                          <a href="#">درباره ما</a>
+                          <a href="#">ارتباط با ما</a>
+                        </div>
+                        
+                </div>
+
           </div>
         </div>
         <button class="openbtn" onclick="openNav()">&#9776;</button>
