Fix bug in the representing drop down button

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                           >
                           &#xe250;</i
                           >
-                        <a class="dropdown-btn">لینک های مفید </a>
+                        <a class="dropdown-btn0">لینک های مفید </a>
                         <i
                             class="material-icons default-humberger-icons"
                             style="color: aliceblue; font-size: 12; margin-left: 20px; margin-right: 0;"
