--- a/index.html
+++ b/index.html
@@ -80,21 +80,64 @@
           </div>
         </div>
         <div class="navbar-icons d-flex align-items-center">
-                  <a>
+                  <a class="text-decoration-none">
                         <div class="navbar-icons-default">
                                 <i class="material-icons">&#xe850;</i>
                         </div>
                   </a>
-                  <a>
-                        <div class="navbar-icons-default">
-                               <i class="material-icons">&#xe54c;</i>
-                         </div>
-                  </a>
-                 <a>
+                  
+                  <div class="dropdown">
+                    <a href="#" class="text-decoration-none" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"">
                       <div class="navbar-icons-default">
-                             <i class="material-icons">&#xe7fd;</i>
+                            <i class="material-icons">&#xe54c;</i>
                       </div>
-                 </a>
+                    </a>  
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" style="width: 400px">
+                      <li>
+                              <div  class="d-flex align-items-center justify-content-around">
+                                <p style="width: 250px; margin-top: 15px; margin-left: 150px; margin-right: 20px;">0 مورد</p>
+                                <a class="dropdown-item" href="#" style="color: rgb(113, 113, 226); ">مشاهده سبد خرید</a>
+                              </div>
+                              <hr style="height: 1px; color: darkgrey;">
+                               <div class="d-flex align-items-center justify-content-around">
+                                    <div class="p-3">
+                                          <img src="src/icon.png"  width="50px" style="border-radius: 50%;" alt="icon" />
+                                    </div>
+                                    <div>
+                                          <p style="margin-top: 10px;">آموزش وردپرس با استفاده از ویزارد</p>
+                                    </div>
+                                    <div>
+                                            <i class="material-icons">&#xe872;</i>
+                                    </div>
+                               </div>
+                               <hr style="height: 1px; color: darkgrey;">
+                               <div  class="d-flex align-items-center justify-content-around">
+                                <p style="width: 250px; margin-top: 15px; margin-left: 150px; margin-right: 20px;">مجموع : </p>
+                                <a class="dropdown-item" href="#" style="font-weight: bold; ">190/000
+                                <span>تومان
+                                </span>
+                                </a>
+                              </div>
+                              <div class="d-flex justify-content-center">
+                                <button type="button" class="btn btn-primary my-3" style="width: 100%;">تکمیل فرایند خرید</button>
+                              </div>
+                      </li>
+                    </ul>
+               </div>
+                 <div class="dropdown">
+                      <a href="#" class="text-decoration-none" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"">
+                        <div class="navbar-icons-default">
+                              <i class="material-icons">&#xe7fd;</i>
+                        </div>
+                      </a>  
+                      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" style="width: 200px">
+                        <li><a class="dropdown-item" href="#">دوره ها</a></li>
+                        <li><a class="dropdown-item" href="#">مالی و اشتراک</a></li>
+                        <li><a class="dropdown-item" href="#">پرسش ها</a></li>
+                        <li><a class="dropdown-item" href="#">ماموریت ها</a></li>
+                        <li><a class="dropdown-item" href="#">خروج از حساب کاربری</a></li>
+                      </ul>
+                 </div>
         </div>
       </div>
     </nav>
@@ -107,11 +150,9 @@
                 <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNavDropdown">
                   <ul class="navbar-nav">
                     <li class="nav-item d-flex align-items-center">
-                      <i class="material-icons menulist-navbar-icon" >&#xe88a;</i>
                       <a class="nav-link active" aria-current="page" href="#">صفحه اصلی</a>
                     </li>
                     <li class="nav-item dropdown d-flex align-items-center">
-                      <i class="material-icons menulist-navbar-icon">&#xe04a;</i>
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         دوره های آموزشی
                       </a>
@@ -122,19 +163,15 @@
                       </ul>
                     </li>
                     <li class="nav-item d-flex align-items-center">
-                      <i class="material-icons menulist-navbar-icon">&#xe8af;</i>
                       <a class="nav-link" href="#">پرسش و پاسخ</a>
                     </li>
                     <li class="nav-item d-flex align-items-center">
-                      <i class="material-icons menulist-navbar-icon">&#xe02f;</i>
                       <a class="nav-link" href="#">مقالات</a>
                     </li>
                     <li class="nav-item  d-flex align-items-center">
-                      <i class="material-icons menulist-navbar-icon">&#xe887;</i>
                       <a class="nav-link" href="#">سوالات متداول</a>
                     </li>
                     <li class="nav-item dropdown d-flex align-items-center">
-                      <i class="material-icons menulist-navbar-icon">&#xe157;</i>
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         لینک های مفید
                       </a>
