--- a/index.html
+++ b/index.html
@@ -99,8 +99,9 @@
                                 <a class="dropdown-item" href="#" style="color: rgb(113, 113, 226); ">مشاهده سبد خرید</a>
                               </div>
                               <hr style="height: 1px; color: darkgrey;">
+
                                <div class="d-flex align-items-center justify-content-around">
-                                    <div class="p-3">
+                                    <div class="p-2">
                                           <img src="src/icon.png"  width="50px" style="border-radius: 50%;" alt="icon" />
                                     </div>
                                     <div>
@@ -110,9 +111,31 @@
                                             <i class="material-icons">&#xe872;</i>
                                     </div>
                                </div>
+                               <div class="d-flex align-items-center justify-content-around">
+                                <div class="p-2">
+                                      <img src="src/icon.png"  width="50px" style="border-radius: 50%;" alt="icon" />
+                                </div>
+                                <div>
+                                      <p style="margin-top: 10px;">آموزش وردپرس با استفاده از ویزارد</p>
+                                </div>
+                                <div>
+                                        <i class="material-icons">&#xe872;</i>
+                                </div>
+                           </div>
+                           <div class="d-flex align-items-center justify-content-around">
+                            <div class="p-2">
+                                  <img src="src/icon.png"  width="50px" style="border-radius: 50%;" alt="icon" />
+                            </div>
+                            <div>
+                                  <p style="margin-top: 10px;">آموزش وردپرس با استفاده از ویزارد</p>
+                            </div>
+                            <div>
+                                    <i class="material-icons">&#xe872;</i>
+                            </div>
+                       </div>
                                <hr style="height: 1px; color: darkgrey;">
                                <div  class="d-flex align-items-center justify-content-around">
-                                <p style="width: 250px; margin-top: 15px; margin-left: 150px; margin-right: 20px;">مجموع : </p>
+                                <p style="width: 250px; margin-top: 10px; margin-left: 150px; margin-right: 20px;">مجموع : </p>
                                 <a class="dropdown-item" href="#" style="font-weight: bold; ">190/000
                                 <span>تومان
                                 </span>
@@ -130,12 +153,79 @@
                               <i class="material-icons">&#xe7fd;</i>
                         </div>
                       </a>  
-                      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" style="width: 200px">
-                        <li><a class="dropdown-item" href="#">دوره ها</a></li>
-                        <li><a class="dropdown-item" href="#">مالی و اشتراک</a></li>
-                        <li><a class="dropdown-item" href="#">پرسش ها</a></li>
-                        <li><a class="dropdown-item" href="#">ماموریت ها</a></li>
-                        <li><a class="dropdown-item" href="#">خروج از حساب کاربری</a></li>
+                      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" style="width: 300px">
+                        <li class="d-flex p-2">
+                              <div  class="ml-4">
+                                <img src="src/icon.png" width="50px" alt="profile" style="border-radius: 50%;"/>
+                              </div>
+                              <div class="mx-3">
+                                <h5>نام کاربر</h5>
+                                <a href="#" class="text-decoration-none">
+                                  <p class="d-flex align-items-center">
+                                    <span >مشاهده پنل کاربری</span>
+                                    <i class="material-icons px-2">&#xe317;</i>
+                                  </p>
+                                </a>
+                              </div>
+                        </li>
+                        <li class="d-flex ">
+                          <div class="d-flex">
+                            <div style="width: 10px; height: 10px; border-radius: 50%; background-color: rgb(54, 131, 218);margin-top: 5px;margin-left: 10px;margin-right: 20px;"></div>
+                            <p style="font-weight: bold;">کیف پول</p>
+                          </div>
+                          <div>
+                            <p style="margin-right: 90px;">0 تومان</p>
+                          </div>
+                        </li>
+                        <li class="d-flex ">
+                          <div class="d-flex">
+                            <div style="width: 10px; height: 10px; border-radius: 50%; background-color: rgb(121, 216, 67);margin-top: 5px;margin-left: 10px;margin-right: 20px;"></div>
+                            <p style="font-weight: bold;">تجربه کاربری </p>
+                          </div>
+                          <div>
+                            <p style="color:rgb(121, 216, 67) ; margin-right: 65px;">30 تجربه</p>
+                          </div>
+                        </li>
+                        <li class="d-flex">
+                          <div class="d-flex">
+                            <div style="width: 10px; height: 10px; border-radius: 50%; background-color: rgb(233, 124, 35);margin-top: 5px;margin-left: 10px;margin-right: 20px;"></div>
+                            <p style="font-weight: bold;">باقیمانده اشتراک</p>
+                          </div>
+                          <div>
+                            <p style="color: rgb(233, 124, 35);margin-right: 40px;">عضو ویژه نیستید</p>
+                          </div>
+                        </li>
+                          <hr>
+                        <li class="d-flex align-items-center">
+                            <a class="dropdown-item d-flex" href="#">
+                                <i  class="material-icons " style="color: rgb(57, 58, 59)">&#xe04b;</i>
+                                <p style="padding-top: 3px; margin-right: 10px;">دوره ها</p>
+                          </a>
+                        </li>
+                        <li class="d-flex align-items-center">
+                          <a class="dropdown-item d-flex" href="#">
+                              <i  class="material-icons " style="color: rgb(57, 58, 59)">&#xe850;</i>
+                              <p style="padding-top: 3px; margin-right: 10px;">مالی و اشتراک ها</p>
+                        </a>
+                      </li>
+                      <li class="d-flex align-items-center">
+                        <a class="dropdown-item d-flex" href="#">
+                            <i  class="material-icons " style="color: rgb(57, 58, 59)">&#xe8fd;</i>
+                            <p style="padding-top: 3px; margin-right: 10px;">پرسش ها</p>
+                      </a>
+                    </li>
+                    <li class="d-flex align-items-center">
+                      <a class="dropdown-item d-flex" href="#">
+                          <i  class="material-icons " style="color: rgb(57, 58, 59)">&#xe3a0;</i>
+                          <p style="padding-top: 3px; margin-right: 10px;">ماموریت ها</p>
+                    </a>
+                  </li>
+                  <li class="d-flex align-items-center">
+                    <a class="dropdown-item d-flex" href="#">
+                        <i  class="material-icons " style="color: rgb(57, 58, 59)">&#xe879;</i>
+                        <p style="padding-top: 3px; margin-right: 10px;">خروج از حساب کاربری</p>
+                  </a>
+                </li>
                       </ul>
                  </div>
         </div>
