Fixed the Navbar Icons in the Tablet and Mobile Scale

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         display: none;
       "
     ></div>
-    <div class="mobile-humberger-menu">
+    <div class="mobile-humberger-menu d-flex align-items-center">
       <div class="order-1">
         <div id="mySidepanel" class="sidepanel">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
@@ -307,7 +307,7 @@
               />
             </div>
           </div>
-          <div class="humberger-links">
+          <div class="humberger-links ">
             <div class="d-flex">
               <i
                 class="material-icons default-humberger-icons"
@@ -397,12 +397,36 @@
 
           </div>
         </div>
-        <button class="openbtn" onclick="openNav()">&#9776;</button>
+        
       </div>
+      <div class="d-flex">
+        <button class="openbtn" onclick="openNav()">&#9776;</button>
       <div class="order-2">
         <div class="logo-image">
           <img src="src/logo.png" width="100" alt="logo" />
         </div>
+      </div>
+      </div>
+      <div class="order-3">
+        <div class="d-flex humberger-icons-default mx-2">
+          <a class="text-decoration-none">
+            <div class="navbar-icons-default">
+              <i class="material-icons">&#xe850;</i>
+            </div>
+          </a>
+          <a href="#" class="text-decoration-none" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
+            aria-expanded="false"">
+              <div class=" navbar-icons-default">
+            <i class="material-icons">&#xe54c;</i>
+        </div>
+        </a>
+        <a href="#" class="text-decoration-none" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
+          aria-expanded="false"">
+              <div class=" navbar-icons-default">
+          <i class="material-icons">&#xe7fd;</i>
+      </div>
+      </a>
+    </div>
       </div>
     </div>
   </body>
