--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
             >&times;</a
           >
-          <div class="input-group d-flex justify-content-center">
+          <div class="input-group d-flex justify-content-center px-1">
             <div class="input-group-prepend searchbox-position">
               <i class="fa fa-search searchbox-icon-position"></i>
               <input
