Fixed the Colors in Responsive mode

--- a/index.html
+++ b/index.html
@@ -410,20 +410,20 @@
       <div class="order-3">
         <div class="d-flex humberger-icons-default mx-2">
           <a class="text-decoration-none">
-            <div class="navbar-icons-default">
-              <i class="material-icons">&#xe850;</i>
+            <div class="navbar-icons-default humberger-circle-color">
+              <i class="material-icons humberger-icons-color">&#xe850;</i>
             </div>
           </a>
           <a href="#" class="text-decoration-none" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
-            aria-expanded="false"">
-              <div class=" navbar-icons-default">
-            <i class="material-icons">&#xe54c;</i>
+            aria-expanded="false">
+              <div class=" navbar-icons-default humberger-circle-color">
+            <i class="material-icons humberger-icons-color">&#xe54c;</i>
         </div>
         </a>
         <a href="#" class="text-decoration-none" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
-          aria-expanded="false"">
-              <div class=" navbar-icons-default">
-          <i class="material-icons">&#xe7fd;</i>
+          aria-expanded="false">
+              <div class=" navbar-icons-default humberger-circle-color">
+          <i class="material-icons humberger-icons-color">&#xe7fd;</i>
       </div>
       </a>
     </div>
