Fix Closing the DROPDOWN while clicking inside it!

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <i class="material-icons">&#xe54c;</i>
         </div>
         </a>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" style="width: 400px">
+        <ul class="dropdown-menu" id="wallet-dropdown-menu" aria-labelledby="dropdownMenuButton1" style="width: 400px">
           <li>
             <div class="d-flex align-items-center justify-content-around">
               <p style="width: 250px; margin-top: 15px; margin-left: 150px; margin-right: 20px;">0 مورد</p>
@@ -130,7 +130,7 @@
           <i class="material-icons">&#xe7fd;</i>
       </div>
       </a>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1" style="width: 300px">
+      <ul class="dropdown-menu" id="account-dropdown-menu" aria-labelledby="dropdownMenuButton1" style="width: 300px">
         <li class="d-flex p-2">
           <div class="ml-4">
             <img src="src/icon.png" width="50px" alt="profile" style="border-radius: 50%;" />
