Fixed the list items in the humberger menu

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <!-- Links for Icons amd Font and Other stylesheets -->
+
 <head>
 
   <meta charset="UTF-8" />
@@ -274,7 +275,7 @@
         background: rgba(0, 0, 0, 0.3);
         display: none;
    "></div>
-   
+
   <div class="mobile-humberger-menu d-flex align-items-center">
     <div class="order-1">
 
@@ -300,29 +301,42 @@
           </div>
           <div class="d-flex">
             <i class="material-icons default-humberger-icons" style="color: aliceblue; font-size: 12">
-              &#xe22b;</i>
+              &#xe150;</i>
             <a href="#">ثبت نام</a>
           </div>
-          <div class="d-flex">
-            <i class="material-icons default-humberger-icons" style="color: aliceblue; font-size: 12">
-              &#xe335;</i>
-            <a href="#">چارت آموزشی</a>
+          <!-- Drop Down Menu in Humberger Menu in the Right side -->
+          <div class="">
+            <div class="d-flex dropdown-btn">
+              <i class="material-icons default-humberger-icons"
+                style="color: aliceblue; font-size: 12; margin-right: 25px;">
+                &#xe63a;</i>
+              <a class="dropdown-btn0">دوره های آموزشی</a>
+              <i class="material-icons default-humberger-icons"
+                style="color: aliceblue; font-size: 12; margin-left: 20px; margin-right: 0;">
+                &#xe5c5;</i>
+            </div>
+            <div class="dropdown-container">
+              <a href="#">دوره HTML CSS</a>
+              <a href="#">دوره هیولاشو جاوااسکریپت</a>
+              <a href="#">دوره متخصص ری اکت</a>
+            </div>
+
           </div>
           <div class="d-flex">
             <i class="material-icons default-humberger-icons" style="color: aliceblue; font-size: 12">
-              &#xe63a;</i>
-            <a href="#">دوره های آموزشی</a>
+              &#xe887;</i>
+            <a href="#">پرسش و پاسخ</a>
           </div>
           <div class="d-flex">
             <i class="material-icons default-humberger-icons" style="color: aliceblue; font-size: 12">
-              &#xe04b;</i>
-            <a href="#">آخرین ویدیوها</a>
+              &#xe431;</i>
+            <a href="#">مقالات</a>
           </div>
 
           <div class="d-flex">
             <i class="material-icons default-humberger-icons" style="color: aliceblue; font-size: 12">
-              &#xe865;</i>
-            <a href="#">مقالات آموزشی</a>
+              &#xe0b7;</i>
+            <a href="#">سوالات متداول</a>
           </div>
 
           <!-- Drop Down Menu in Humberger Menu in the Right side -->
@@ -340,6 +354,7 @@
               <a href="#">کانال تلگرام</a>
               <a href="#">درباره ما</a>
               <a href="#">ارتباط با ما</a>
+              <a href="#">همکاری با ما</a>
             </div>
 
           </div>
